--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
   <title>Caring Hearts Helping Hands</title>
 </head>
 <body>
-  
+
   <div class="info">
-    <h2>We will be live in...</h2>
+    <h2>Great things take Time to build, as does our website.
+Please visit us in .....</h2>
     <div class="time">
       <div class="day">
         <p id="day__digit">23</p>
