--- a/index.html
+++ b/index.html
@@ -52,28 +52,28 @@ Please visit us in .....</h2>
 
         <div class="days">
           <div class="board">
-            <p id="days__number">12</p>
+            <p id="days__number">00</p>
           </div>
           <p class="board__label">days</p>
         </div>
 
         <div class="hours">
           <div class="board">
-            <p id="hours__number">56</p>
+            <p id="hours__number">00</p>
           </div>
           <p class="board__label">hours</p>
         </div>
 
         <div class="minutes">
           <div class="board">
-            <p id="minutes__number">03</p>
+            <p id="minutes__number">00</p>
           </div>
           <p class="board__label">minutes</p>
         </div>
 
         <div class="seconds">
           <div class="board">
-            <p id="seconds__number">02</p>
+            <p id="seconds__number">00</p>
           </div>
           <p class="board__label">seconds</p>
         </div>
@@ -89,7 +89,7 @@ Please visit us in .....</h2>
     <span class="link"> <a href="https://www.caringheartshelpinghands.com">caringheartshelpinghands.com</a> </span>
   </div>
 
-  <script>
+  <!-- <script>
     function countdown() {
       var now = new Date();
       var liveDate = new Date(2019, 03, 11);
@@ -120,7 +120,7 @@ Please visit us in .....</h2>
     }
     
     setInterval(countdown, 1000)
-  </script>
+  </script> -->
   
 </body>
 </html>
