email change to Ea

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       <h4 class="heading form__heading">Let’s get to know each other</h4>
       <div class="form-card">
         <h5 class="form-card__heading">Let us show you how much we care</h5>
-          <form action="https://formspree.io/cderanamie@yahoo.com" method="POST">
+          <form action="https://formspree.io/emmanuelasirifi1993@yahoo.com" method="POST">
 
             <div class="form-field">
               <label for="form-name">Name</label>
