email change to Ea

--- a/index.html
+++ b/index.html
@@ -15,7 +15,38 @@
 
     <div class="header">
       <img class="logo" id="home" src="img/CHWHH logo_cropped.png" alt="caring hearts helping hands logo">
-      <span id="hamburgerIcon"class="hamburger-icon"><i class="fas fa-bars fa-2x"></i></span>
+      <!-- <span onclick="toggleMenu()" id="hamburgerIcon"class="hamburger-icon">
+        <i class="fas fa-bars fa-2x"></i>
+      </span> -->
+      <div class="hamburger-icon" id="hamburgerIcon" onclick="toggleMenu()">
+        <div class="hamburger-icon__middle"></div>
+      </div>
+      <!-- <div onclick="toggleMenu()" id="hamburgerIcon" class="hamburger-icon">
+          <div class="hamburger-icon__top" style="
+        position: absolute;
+        top: 4;
+        left: 0;
+        width: 28px;
+        height: 3px;
+        background: #9C27B0;
+      "></div> 
+          <div class="hamburger-icon__middle" style="
+        position: absolute;
+        top: 12;
+        left: 0;
+        width: 28px;
+        height: 3px;
+        background: #9C27B0;
+      "></div> 
+          <div class="hamburger-icon__bottom" style="
+        position: absolute;
+        bottom: 5;
+        left: 0;
+        width: 28px;
+        height: 3px;
+        background: #9C27B0;
+      "></div>
+      </div> -->
 
       <div class="company__info">
         <div class="company__info__inner">
