fixed mobile menu awkward scroll

--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
     <div class="header">
         <div class="mobile-menu" id="mobileMenu">
             <ul class="mobile-menu__links">
-              <li><a href="#home">Home</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#services">Services</a></li>
+              <!-- <li><a href="#home">Home</a></li> -->
+              <li class="pressed">Home</li>
+              <li><a href="#about" onclick="toggleMenu()">About</a></li>
+              <li><a href="#services" onclick="toggleMenu()">Services</a></li>
             </ul>
             <div class="mobile-menu__info">
               <p class="mobile-menu__phone"><span class="white">Call Us Today:</span>  774 208 3238</p>
