finished adding careers section

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <li>Home</li>
             <li><a href="#about" onclick="toggleMenu()">About</a></li>
             <li><a href="#services" onclick="toggleMenu()">Services</a></li>
+            <li><a href="/form.html" onclick="toggleMenu()">Careers</a></li>
           </ul>
           <div class="mobile-menu__info">
             <p class="mobile-menu__phone"><span class="white">Call Us Today:</span>  774 208 3238</p>
@@ -67,6 +68,7 @@
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#services">Services</a></li>
+            <li><a href="/form.html">Careers</a></li>
           </ul>
         </nav>
       </div>
@@ -184,7 +186,7 @@
               <label for="form-msg">Short message (300 chars)</label>
               <textarea id="form-msg" cols="0" rows="5" type="text" name="Short message" maxlength="300" placeholder="Type a short message here..."></textarea>
             </div>
-            <p>Please make sure you complete reCaptcha after you submit the form</p>
+            <p>Please make sure you complete reCaptcha after submitting the form</p>
             <input type="submit" value="Apply for Care">
           </form>        
       </div>
